# textutils-11

./: A1.ipynb  README.md  environment.yml  pyproject.toml
src/textutils/: core.py
tests/integration/: test_end_to_end.py
tests/unit/: test_core.py
