[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textutils"
version = "0.0.0"
description = "Utilities for text"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Caroline Wheeler" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["textutils*"]
